syntax = "proto3";

package service;

option go_package = "grpc-service/proto";

// Unary Communication and Bi-Directional Communication

// CommonRequest: Set range `from`, `to`
message CommonRequest {
    int64 to = 1;
}


// CommonResponse: Calculate response
message CommonResponse {
    int64 responseNumber = 1;
}

// Client stream
message ClientStreamResponse{
    repeated int64 responseNumbers = 1;
}

// Server stream
message ServerStreamRequest{
    repeated int64 tos = 1;
}



service CommonService {
    rpc UnaryCommunication(CommonRequest) returns (CommonResponse);
    rpc ClientStreamingCommunication(stream CommonRequest) returns (ClientStreamResponse);
    rpc ServerStreamingCommunication(ServerStreamRequest) returns (stream CommonResponse);
    rpc BiDirectionalCommunication(stream CommonRequest) returns (stream CommonResponse);
}